# xgdi

./: CMakeLists.txt  LICENSE  README.md
inc/muchcool/: xgdi.hpp
inc/muchcool/xgdi/: Bitmap.hpp  Datatypes.hpp  DrawingContext.hpp  Font.hpp  FormattedText.hpp  bitmap.hpp  datatypes.hpp  drawing_context.hpp  font.hpp  formatted_text.hpp
src/: Bitmap.cpp  DrawingContext.cpp  Font.cpp  FormattedText.cpp~  XGDI.cpp~  bitmap.cpp  datatypes.cpp  drawing_context.cpp  font.cpp  formatted_text.cpp
src/Shaders/: bitmap.frag  glyph.vert  roundrect.frag  roundrect.vert  shader.vert
src/shader/: glyph.frag  glyph_sdf.frag  rect.frag  rect.vert
